Plone/src/docpool.theme/docpool/theme/webpack_resources/src/docpooltheme/docpool_rei.less
#faceted_table {
  .td_cell_Metadata {
    img {
      width: 15px;
    }
  }
}

a.rei-eea-search {
  &.metadata {
    &.open div {
      background-image: url("++theme++docpoolrei/file-text-line.svg");
      background-repeat: no-repeat;
      background-size: cover;
      height: 20px;
      width: 20px;
      text-indent: -99999em;
      float:right;
    }

    &.close div {
      background-image: url("++theme++docpoolrei/file-text-fill.svg");
      background-repeat: no-repeat;
      background-size: cover;
      height: 20px;
      width: 20px;
      text-indent: -99999em;
      float:right;
    }
  }

  &.metatitle {
    &.open div {
      background-image: url("++theme++docpoolrei/arrow-down.svg");
      background-repeat: no-repeat;
      background-size: cover;
      height: 20px;
      width: 20px;
      text-indent: -99999em;
      float:left;
    }

    &.close div {
      background-image: url("++theme++docpoolrei/arrow-up.svg");
      background-repeat: no-repeat;
      background-size: cover;
      height: 20px;
      width: 20px;
      text-indent: -99999em;
      float:left;
    }
  }
}

